update swagger.yaml, remove old swagger comments
